--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ssh_test1">
+    <wb-module deploy-name="ssh_test">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/conf"/>
-        <property name="context-root" value="ssh_test1"/>
-        <property name="java-output-path" value="/ssh_test1/build/classes"/>
+        <property name="java-output-path" value="/ssh_test/build/classes"/>
+        <property name="context-root" value="ssh_test"/>
     </wb-module>
 </project-modules>
